# TAbot

./: .gitignore  agent.py  betfair_client.py  betfair_harvest.py  brain.py  gui.py  harvest_matrix.csv  historical_results.csv  interceptor.py  odds_capture.py  parser.py  pyproject.toml  start_tunnel.bat  start_web.bat  tools.py  web_app.py
.github/workflows/: betfair_results.yml  odds_capture.yml
