[project]
name = "tabot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "playwright (>=1.60.0,<2.0.0)",
    "playwright-stealth (>=2.0.3,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)",
    "ollama (>=0.4.0,<1.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "requests (>=2.32.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
